tests/errors/syntax_errors/raise.py
# pylint: disable=missing-function-docstring, missing-module-docstring/

raise NotImplementedError("raises error")
